# cxpak

./: .dockerignore  .gitignore  .mise.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dist  Dockerfile.standalone  README.md  SECURITY.md  build.rs
.cargo/: config.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  language_support.yml
.github/workflows/: ci.yml  release.yml
assets/: cxpak-palette.js  cxpak-spa-controller.js  cxpak-visual.css
bench/: baseline.json  corpus.toml
benches/: BASELINES.md  indexing.rs
docs/: LANDSCAPE_RESEARCH_2026.md  MARKET_ANALYSIS_SUMMARY.md  MIGRATION-3.0.md  RESEARCH_INDEX.md  ROADMAP_RECOMMENDATIONS.md
docs/adrs/: 0001-distribution-cratesio-and-github-binaries.md  0002-git2-library-no-shelling-out.md  0003-index-as-central-data-structure.md  0004-language-support-trait-boundary.md  0005-no-config-file-flags-only.md  0006-out-of-band-indexing-vs-llm-exploration.md  0007-pipeline-stage-module-boundaries.md  0008-single-binary-grammars-compiled-in-behind-feature-flags.md  0009-synchronous-no-async-runtime.md  0010-tdd-with-coverage-gate.md  0011-three-layer-ignore-rules-via-ignore-crate.md  0012-three-output-formats-markdown-xml-json.md  0013-tiktoken-cl100k-count-once-cache.md  0014-top-down-degradation-omission-markers.md  0015-trace-call-graph-budget-controlled-depth.md  0016-weighted-section-budget-with-overflow.md  0017-cxpak-gitignore-injection.md  0018-omission-pointer-marker-format.md  0019-pack-mode-detail-files-on-budget-overflow.md  0020-detail-file-extension-matches-format.md  0021-language-support-trait-tree-sitter.md  0022-trace-command-dependency-graph-bfs.md  0023-xml-omission-pointer-as-element.md  0024-cache-parseresult-serde-serialization.md  0025-cache-preserved-during-stale-output-cleanup.md  0026-cxpak-clean-full-wipe-command.md  0027-diff-command-diff-first-budget.md  0028-homebrew-tap-prebuilt-tarballs.md  0029-parse-cache-mtime-size-key.md  0030-shared-parse-with-cache-function.md  0031-bats-shell-test-tdd-with-dryrun-and-mocked-uname.md  0032-default-50k-token-budget-always-ask.md  0033-ensure-cxpak-binary-resolution-and-autodownload.md  0034-github-release-tarball-distribution.md  0035-markdown-hardcoded-output-format.md  0036-plugin-no-agents-no-hooks-skills-commands-only.md  0037-plugin-versioned-in-repo-distribution.md  0038-daemon-feature-flag-boundary.md  0039-default-token-budget-50k.md  0040-focus-flag-score-boost.md  (+178 more)
docs/plans/: 2026-03-08-multi-file-output-plan.md  2026-03-10-homebrew-caching-diff-design.md  2026-03-10-v0.4.0-implementation-plan.md  2026-03-11-claude-plugin-design.md  2026-03-11-claude-plugin-implementation-plan.md  2026-03-12-v060-implementation-plan.md  2026-03-12-v061-bugfix-patch-design.md  2026-03-12-v061-implementation-plan.md  2026-03-12-v070-performance-dx-design.md  2026-03-12-v080-integrations-design.md  2026-03-13-v070-implementation-plan.md  2026-03-13-v080-implementation-plan.md  2026-03-17-v090-implementation-plan.md  2026-03-17-v090-mcp-context-design.md  2026-03-18-v0100-design.md  2026-03-18-v0100-implementation-plan.md  2026-03-19-v0110-design.md  2026-03-20-v0110-implementation-plan.md  2026-03-21-v0120-design.md  2026-03-21-v0120-implementation-plan.md  2026-03-22-v0130-design.md  2026-03-22-v0130-implementation-plan.md  2026-03-22-v100-design.md  2026-03-23-v100-implementation-plan.md  2026-03-27-v110-design.md  2026-03-27-v110-implementation-plan.md  2026-03-31-v120-v200-roadmap-design.md  2026-04-01-v120-implementation-plan.md  2026-04-01-v130-implementation-plan.md  2026-04-01-v140-implementation-plan.md  2026-04-01-v150-implementation-plan.md  2026-04-01-v160-implementation-plan.md  2026-04-01-v200-implementation-plan-part1.md  2026-04-01-v200-implementation-plan-part2.md  2026-04-17-v210-design.md  2026-04-17-v210-implementation-plan-v2.md  2026-04-17-v210-implementation-plan.md
docs/release/: v2.1.0-smoke.md
examples/: audit.rs
plans/: 2026-07-11-cxpak-ui-overhaul-PLAN.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: clean.md  diff.md  overview.md  trace.md
plugin/lib/: cxpak-merge-driver  cxpak-post-commit  ensure-cxpak  ensure-cxpak-serve
plugin/tests/: test_cmd_clean.bats  test_cmd_diff.bats  test_cmd_overview.bats  test_cmd_trace.bats  test_ensure_cxpak.bats  test_integration.bats  test_skill_codebase_context.bats
scripts/: disk-cleanup.sh  feature-matrix.sh  install-hooks.sh
specs/: 2026-07-11-cxpak-ui-overhaul-SPEC.md
src/: dev_maintenance.rs  lib.rs  main.rs  util.rs
src/auto_context/: briefing.rs  diff.rs  efficiency.rs  mod.rs  noise.rs
src/bench/: fetch.rs  gate.rs  mod.rs  recall.rs
src/budget/: counter.rs  degrader.rs  mod.rs
src/cache/: mod.rs  parse.rs
src/capability/: adapter.rs  mod.rs
src/cli/: mod.rs
src/commands/: clean.rs  conventions.rs  diff.rs  graph.rs  hook.rs  mod.rs  onboard.rs  overview.rs  plugin.rs  schema.rs  search.rs  serve.rs  trace.rs  visual.rs  watch.rs
src/context_quality/: annotation.rs  degradation.rs  expansion.rs
src/conventions/: deps.rs  (+12 more)
tests/: api_v1_integration.rs  architecture_no_core_cycle.rs  auto_context_determinism.rs  auto_context_v120.rs  bench_gate.rs  bench_recall.rs  bidi_sanitization.rs  cache_statindex.rs  cli_test.rs  column_lineage.rs  controller_dom_safety.rs  conventions_integration.rs  cross_channel_consistency.rs  css_contrast.rs  dead_code_adversarial.rs  determinism_ties.rs  diff_review.rs  edge_confidence.rs  graph_query_surfaces.rs  health_exposes_composite.rs  hook_integration.rs  incremental_index.rs  index_lifecycle.rs  insights_surprising.rs  integration_cross_lang.rs  lsp_hardening.rs  lsp_integration.rs  lsp_methods_wired.rs  lsp_no_stubs_adversarial.rs  lsp_subprocess.rs  mcp_freshness_subprocess.rs  mcp_live_surface.rs  mcp_nonblocking_startup.rs  mcp_slug_validation.rs  mcp_stdio_framing.rs  mcp_tool_budget.rs  mcp_visual_onboard.rs  nodeid_nfkc.rs  onboard_cli.rs  onboarding.rs  (+37 more)
(+123 files in other folders)
